<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/bgColor">

    <TextView
        android:id="@+id/creditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/lobster"
        android:text="Credits: 500"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:layout_marginTop="30dp"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="390dp"
            android:background="#fff"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/instrumentImage"
                android:layout_width="379dp"
                android:layout_height="200dp"
                android:background="@drawable/rounded_corner"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/instrumentName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/primaryColor"
                android:textSize="24sp"
                android:textStyle="bold"
                android:fontFamily="@font/lobster"
                />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:numStars="5"
                android:stepSize="0.5" />

            <TextView
                android:id="@+id/itemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/primaryColor"
                android:fontFamily="@font/lobster"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/itemAttributes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/secondaryColor"
                android:fontFamily="@font/lobster"
                android:textSize="25sp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/nextButton"
        style="@style/LobsterButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/primaryColor"
        android:fontFamily="@font/lobster"
        android:text="Next"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:cornerRadius="12dp" />

    <Button
        android:id="@+id/borrowButton"
        style="@style/LobsterButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/accentColor"
        android:text="Borrow"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:cornerRadius="12dp" />
</LinearLayout>
