...
            android:text="Add Note."
            android:textStyle="bold"
            android:textColor="@color/yellow_darker"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/addNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/addNoteHeading"
            android:layout_marginTop="16dp"
            android:background="@drawable/pink_border"
            android:fontFamily="@font/poppins"
...
            android:focusable="false"
            android:clickable="true"
            android:padding="12dp"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/addNoteDesc"
            android:layout_width="399dp"
            android:layout_height="488dp"
            android:layout_below="@id/addNoteTitle"
            android:layout_marginTop="88dp"
            android:background="@drawable/pink_border"
            android:fontFamily="@font/poppins"
...
