<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp"
        tools:context=".UpdateNoteFragment">
        <TextView
            android:id="@+id/editNoteHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins"
            android:text="Edit Note."
            android:textStyle="bold"
            android:textColor="@color/yellow_darker"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="Enter the title"
            android:padding="12dp"
            android:textSize="20sp"
            android:layout_below="@id/editNoteHeading"
            android:background="@drawable/pink_border"
            android:layout_marginTop="16dp"
            android:maxLines="1"
            android:fontFamily="@font/poppins"/>

        <EditText
            android:id="@+id/editNoteDateTimeInput"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/editNoteHeading"
            android:layout_marginTop="92dp"
            android:background="@drawable/pink_border"
            android:clickable="true"
            android:focusable="false"
            android:hint="Select date and time"
            android:padding="12dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editNoteDesc"
            android:layout_width="388dp"
            android:layout_height="412dp"
            android:layout_below="@id/editNoteHeading"
            android:layout_marginTop="164dp"
            android:background="@drawable/pink_border"
            android:fontFamily="@font/poppins"
            android:gravity="top"
            android:hint="Enter the description"
            android:padding="12dp"
            android:textSize="18sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editNoteFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:backgroundTint="@color/yellow_light"
            android:tintMode="@color/white"
            android:src="@drawable/baseline_done_24"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="editFab" />
    </RelativeLayout>
</layout>